service-a.yml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: devops
spec:
  selector:
    app: service-a
  ports:
  - port: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: devops
spec:
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: front
        image: kristinakr/servicea:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
          name: front
