service-b.yml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: devops
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: service-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: devops
spec:
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: back
        image: kristinakr/serviceb:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: back
