egress.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: example
  namespace: devops
spec:
  hosts:
  - reqres.in
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
  namespace: devops
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - reqres.in
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-example
  namespace: devops
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: example
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-example-through-egress-gateway
  namespace: devops
spec:
  hosts:
  - reqres.in
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: example
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: reqres.in
        port:
          number: 80
      weight: 100
